syntax = "proto3";

package raft_server;

service RaftServer {
    rpc Register (RegistrationRequest) returns (RegistrationReply);
    rpc Execute (ExecutionRequest) returns (ExecutionReply);
}

message RegistrationRequest { }

message RegistrationReply {
    bytes status = 1;
    uint64 session_id = 2;
    uint64 leader_hint = 3;
}

message ExecutionRequest {
    uint64 session_id = 1;
    uint64 sequence_number = 2;
    bytes operation = 3;
}

message ExecutionReply {
    bytes status = 1;
    bytes response = 2;
    uint64 leader_hint = 3;
}